# Ludo-help-for-tools-of-AI

./: .gitignore
Domain-Code/: CMakeLists.txt  composition_test.py  game.cpp  game.h  iplayer.h  main.cpp  player_qlearning.h  player_qlearning_compact_state.h  player_qlearning_zone.h  player_random.h  plot_data.py  replayLudoCPP.py  training_and_evaluation.h
Domain-Code/data/: hyper_param_test.py
Players/: player_aggro_fast.h
